<resources>
    <string name="app_name">Game</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">2531654990470385</string>
    <string name="fb_login_protocol_scheme">fb2531654990470385</string>


    <string name="gold_membership">
        <u>Gold Membership</u>
    </string>

    <string name="leader_board">
        <u>Leader Board</u>
    </string>

    <string name="earn_coins">
        <u>Earn Coins</u>
    </string>

    <string name="withdraw">
        <u>Withdraw</u>
    </string>

    <string name="instructions">
        <u>Instructions</u>
    </string>

    <string name="contact_us">
        <u>Contact Us</u>
    </string>

    <string name="share">
        <u>Share</u>
    </string>

    <string name="privacy_policy">
        <u>Privacy Policy</u>
    </string>

    <string name="list_invite_friends">
        <li>Invite friends and 50 coins for each that register with your code</li>
    </string>

    <string name="list_watch_videos">
        <li>Watch ads video and get 10 coins</li>
    </string>
</resources>
