<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#9064BC"
    tools:context=".EarnCoins">

    <TextView
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/earn_coins"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:id="@+id/invite_friends"
        android:gravity="center"
        android:text="@string/list_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <TextView
        android:layout_marginLeft="12dp"
        android:textSize="20sp"
        android:id="@+id/watch_video"
        android:gravity="center"
        android:text="@string/list_watch_videos"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

</LinearLayout>